--- a/index.html
+++ b/index.html
@@ -2,9 +2,61 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v7.0.0/dist/aframe-extras.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
+    <style>
+      #menu {
+        position: fixed;
+        bottom: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        background: rgba(0, 0, 0, 0.7);
+        padding: 10px 20px;
+        border-radius: 15px;
+        color: white;
+        font-family: sans-serif;
+        z-index: 999;
+        text-align: center;
+        width: 80%;
+        max-width: 400px;
+      }
+
+      #menu button {
+        margin: 5px;
+        padding: 8px 15px;
+        border: none;
+        border-radius: 10px;
+        background: #1e90ff;
+        color: white;
+        font-weight: bold;
+        cursor: pointer;
+      }
+
+      #menu button:hover {
+        background: #4682b4;
+      }
+
+      #fact-box {
+        margin-top: 10px;
+        font-size: 14px;
+      }
+    </style>
   </head>
   <body>
+    <!-- Menú flotante -->
+    <div id="menu">
+      <div>
+        <button id="btnWhale">🐳 Ballena</button>
+        <button id="btnOctopus">🐙 Pulpo</button>
+      </div>
+      <div id="fact-box">Selecciona un animal para ver curiosidades</div>
+      <div>
+        <button id="btnPrev">⬅️ Anterior</button>
+        <button id="btnNext">➡️ Siguiente</button>
+      </div>
+    </div>
+
+    <!-- Escena AR -->
     <a-scene
       mindar-image="imageTargetSrc: ./targets.mind; maxTrack: 2"
       color-space="sRGB"
@@ -13,8 +65,8 @@
       device-orientation-permission-ui="enabled: false"
     >
       <a-assets>
-        <a-asset-item id="WhaleO3" src="./WhaleO1.glb"></a-asset-item>
-        <a-asset-item id="OctopusO3" src="./Octopus.glb"></a-asset-item>
+        <a-asset-item id="WhaleModel" src="./WhaleO1.glb"></a-asset-item>
+        <a-asset-item id="OctopusModel" src="./Octopus.glb"></a-asset-item>
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
@@ -22,134 +74,125 @@
       <!-- Ballena -->
       <a-entity id="target-whale" mindar-image-target="targetIndex: 0">
         <a-gltf-model
-          src="#WhaleO3"
+          id="whale-model"
+          src="#WhaleModel"
           position="0 0 0"
           scale="0.7 0.7 0.7"
+          rotation="0 0 0"
+          animation__updown="property: position; to: 0 0.3 0; dur: 2000; easing: easeInOutSine; loop: true; dir: alternate"
+          animation__spin="property: rotation; to: 0 360 0; dur: 6000; loop: true; easing: linear"
         ></a-gltf-model>
-
-        <!-- Menú interactivo -->
-        <a-entity id="whale-menu" visible="false" position="0 0.8 0">
-          <a-plane color="#007BFF" width="1.5" height="0.5" opacity="0.8"></a-plane>
-          <a-text id="whale-text" value="Dato curioso 1: Las ballenas son los animales más grandes del planeta."
-                  align="center" color="#FFF" width="1.4" position="0 0 0.01"></a-text>
-          <a-box id="whale-prev" color="blue" depth="0.05" height="0.2" width="0.3" position="-0.7 -0.3 0.01"></a-box>
-          <a-box id="whale-next" color="blue" depth="0.05" height="0.2" width="0.3" position="0.7 -0.3 0.01"></a-box>
-        </a-entity>
       </a-entity>
 
       <!-- Pulpo -->
       <a-entity id="target-octopus" mindar-image-target="targetIndex: 1">
         <a-gltf-model
-          src="#OctopusO3"
+          id="octopus-model"
+          src="#OctopusModel"
           position="0 -0.25 0"
           scale="0.05 0.05 0.05"
+          rotation="0 0 0"
+          animation__updown="property: position; to: 0 0.2 0; dur: 2500; easing: easeInOutSine; loop: true; dir: alternate"
+          animation__spin="property: rotation; to: 0 360 0; dur: 8000; loop: true; easing: linear"
         ></a-gltf-model>
-
-        <!-- Menú interactivo -->
-        <a-entity id="octopus-menu" visible="false" position="0 0.8 0">
-          <a-plane color="#007BFF" width="1.5" height="0.5" opacity="0.8"></a-plane>
-          <a-text id="octopus-text" value="Dato curioso 1: Los pulpos tienen tres corazones."
-                  align="center" color="#FFF" width="1.4" position="0 0 0.01"></a-text>
-          <a-box id="octopus-prev" color="blue" depth="0.05" height="0.2" width="0.3" position="-0.7 -0.3 0.01"></a-box>
-          <a-box id="octopus-next" color="blue" depth="0.05" height="0.2" width="0.3" position="0.7 -0.3 0.01"></a-box>
-        </a-entity>
       </a-entity>
     </a-scene>
 
     <script>
-      const whaleFacts = [
-        "Dato curioso 1: Las ballenas son los animales más grandes del planeta.",
-        "Dato curioso 2: Las ballenas jorobadas pueden cantar canciones complejas.",
-        "Dato curioso 3: El corazón de una ballena azul puede pesar más de 150 kg."
-      ];
+      const factBox = document.querySelector("#fact-box");
 
-      const octopusFacts = [
-        "Dato curioso 1: Los pulpos tienen tres corazones.",
-        "Dato curioso 2: Los pulpos pueden cambiar de color y textura para camuflarse.",
-        "Dato curioso 3: Son considerados los invertebrados más inteligentes."
-      ];
+      const facts = {
+        whale: [
+          "Las ballenas azules son los animales más grandes que han existido.",
+          "Su corazón puede pesar lo mismo que un coche pequeño.",
+          "Se comunican con cantos que viajan grandes distancias bajo el agua."
+        ],
+        octopus: [
+          "Los pulpos tienen tres corazones y sangre azul.",
+          "Pueden cambiar de color y textura para camuflarse.",
+          "Son considerados de los invertebrados más inteligentes."
+        ]
+      };
 
-      let whaleIndex = 0;
-      let octopusIndex = 0;
+      let currentAnimal = null;
+      let factIndex = 0;
+
+      // Flags de detección
       let whaleDetected = false;
       let octopusDetected = false;
 
-      const whaleMenu = document.getElementById("whale-menu");
-      const octopusMenu = document.getElementById("octopus-menu");
+      const whaleModel = document.getElementById("whale-model");
+      const octopusModel = document.getElementById("octopus-model");
 
-      const whaleText = document.getElementById("whale-text");
-      const octopusText = document.getElementById("octopus-text");
+      const menu = document.getElementById("menu");
 
-      // --- Función para actualizar visibilidad de menús ---
-      function updateMenus() {
-        if (whaleDetected && !octopusDetected) {
-          whaleMenu.setAttribute("visible", true);
-          octopusMenu.setAttribute("visible", false);
-        } else if (!whaleDetected && octopusDetected) {
-          whaleMenu.setAttribute("visible", false);
-          octopusMenu.setAttribute("visible", true);
+      function showFact() {
+        factBox.innerText = facts[currentAnimal][factIndex];
+      }
+
+      function updateMenuVisibility() {
+        // Mostrar menú solo si exactamente un target está detectado
+        if ((whaleDetected && !octopusDetected) || (!whaleDetected && octopusDetected)) {
+          menu.style.display = "block";
         } else {
-          // si ambos detectados o ninguno
-          whaleMenu.setAttribute("visible", false);
-          octopusMenu.setAttribute("visible", false);
+          menu.style.display = "none";
         }
       }
 
       // --- Eventos de detección ---
-      const whaleTarget = document.getElementById("target-whale");
-      const octopusTarget = document.getElementById("target-octopus");
-
-      whaleTarget.addEventListener("targetFound", () => {
+      document.getElementById("target-whale").addEventListener("targetFound", () => {
         whaleDetected = true;
-        whaleIndex = 0;
-        whaleText.setAttribute("value", whaleFacts[whaleIndex]);
-        updateMenus();
+        currentAnimal = "whale";
+        factIndex = 0;
+        showFact();
+        updateMenuVisibility();
       });
-
-      whaleTarget.addEventListener("targetLost", () => {
+      document.getElementById("target-whale").addEventListener("targetLost", () => {
         whaleDetected = false;
-        updateMenus();
+        updateMenuVisibility();
       });
 
-      octopusTarget.addEventListener("targetFound", () => {
+      document.getElementById("target-octopus").addEventListener("targetFound", () => {
         octopusDetected = true;
-        octopusIndex = 0;
-        octopusText.setAttribute("value", octopusFacts[octopusIndex]);
-        updateMenus();
+        currentAnimal = "octopus";
+        factIndex = 0;
+        showFact();
+        updateMenuVisibility();
       });
-
-      octopusTarget.addEventListener("targetLost", () => {
+      document.getElementById("target-octopus").addEventListener("targetLost", () => {
         octopusDetected = false;
-        updateMenus();
+        updateMenuVisibility();
       });
 
-      // --- Botones interactivos ---
-      const addClick = (entity, callback) => {
-        entity.addEventListener("click", callback);
-        // Para interacción con toque en dispositivos móviles
-        entity.addEventListener("touchstart", callback);
-      };
-
-      // Ballena
-      addClick(document.getElementById("whale-prev"), () => {
-        whaleIndex = (whaleIndex - 1 + whaleFacts.length) % whaleFacts.length;
-        whaleText.setAttribute("value", whaleFacts[whaleIndex]);
-      });
-      addClick(document.getElementById("whale-next"), () => {
-        whaleIndex = (whaleIndex + 1) % whaleFacts.length;
-        whaleText.setAttribute("value", whaleFacts[whaleIndex]);
+      // --- Botones para cambiar animal ---
+      document.querySelector("#btnWhale").addEventListener("click", () => {
+        whaleModel.setAttribute("visible", true);
+        octopusModel.setAttribute("visible", false);
+        currentAnimal = "whale";
+        factIndex = 0;
+        showFact();
       });
 
-      // Pulpo
-      addClick(document.getElementById("octopus-prev"), () => {
-        octopusIndex = (octopusIndex - 1 + octopusFacts.length) % octopusFacts.length;
-        octopusText.setAttribute("value", octopusFacts[octopusIndex]);
+      document.querySelector("#btnOctopus").addEventListener("click", () => {
+        whaleModel.setAttribute("visible", false);
+        octopusModel.setAttribute("visible", true);
+        currentAnimal = "octopus";
+        factIndex = 0;
+        showFact();
       });
-      addClick(document.getElementById("octopus-next"), () => {
-        octopusIndex = (octopusIndex + 1) % octopusFacts.length;
-        octopusText.setAttribute("value", octopusFacts[octopusIndex]);
+
+      // --- Botones para navegar curiosidades ---
+      document.querySelector("#btnNext").addEventListener("click", () => {
+        factIndex = (factIndex + 1) % facts[currentAnimal].length;
+        showFact();
+      });
+
+      document.querySelector("#btnPrev").addEventListener("click", () => {
+        factIndex = (factIndex - 1 + facts[currentAnimal].length) % facts[currentAnimal].length;
+        showFact();
       });
     </script>
   </body>
 </html>
+
 
