--- a/index.html
+++ b/index.html
@@ -2,182 +2,127 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v7.0.0/dist/aframe-extras.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
     <style>
-      #menu {
-        position: fixed;
+      body { margin: 0; overflow: hidden; }
+      #scanMessage {
+        position: absolute;
+        top: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        padding: 12px 20px;
+        background: rgba(0, 0, 0, 0.7);
+        color: white;
+        font-family: Arial, sans-serif;
+        border-radius: 10px;
+        text-align: center;
+        z-index: 9999;
+      }
+      #factMenu {
+        position: absolute;
         bottom: 20px;
         left: 50%;
         transform: translateX(-50%);
-        background: rgba(0, 0, 0, 0.7);
-        padding: 10px 20px;
-        border-radius: 15px;
+        background: rgba(0, 0, 100, 0.7);
         color: white;
-        font-family: sans-serif;
-        z-index: 999;
+        padding: 15px;
+        border-radius: 12px;
+        display: none;
+        font-family: Arial, sans-serif;
+        max-width: 80%;
         text-align: center;
-        width: 80%;
-        max-width: 400px;
-        display: none; /* oculto por defecto */
-      }
-
-      #menu button {
-        margin: 5px;
-        padding: 8px 15px;
-        border: none;
-        border-radius: 10px;
-        background: #1e90ff;
-        color: white;
-        font-weight: bold;
-        cursor: pointer;
-      }
-
-      #menu button:hover {
-        background: #4682b4;
-      }
-
-      #fact-box {
-        margin-top: 10px;
-        font-size: 14px;
       }
     </style>
   </head>
   <body>
-    <!-- Menú flotante -->
-    <div id="menu">
-      <div id="fact-box">Selecciona un animal para ver curiosidades</div>
-      <div>
-        <button id="btnPrev">⬅️ Anterior</button>
-        <button id="btnNext">➡️ Siguiente</button>
-      </div>
-    </div>
+    <!-- Mensaje inicial -->
+    <div id="scanMessage">🔎 Escanea la tarjeta de la Ballena 🐳 o del Pulpo 🐙</div>
 
-    <!-- Escena AR -->
-    <a-scene
-      mindar-image="imageTargetSrc: ./targets.mind; maxTrack: 2"
-      color-space="sRGB"
-      renderer="colorManagement: true, physicallyCorrectLights"
-      vr-mode-ui="enabled: false"
-      device-orientation-permission-ui="enabled: false"
-    >
+    <!-- Menú de datos curiosos -->
+    <div id="factMenu">Selecciona un animal para ver curiosidades</div>
+
+    <a-scene mindar-image="imageTargetSrc: ./targets.mind; maxTrack: 2" 
+             color-space="sRGB" 
+             renderer="colorManagement: true, physicallyCorrectLights" 
+             vr-mode-ui="enabled: false" 
+             device-orientation-permission-ui="enabled: false">
+
       <a-assets>
-        <a-asset-item id="WhaleModel" src="./WhaleO1.glb"></a-asset-item>
-        <a-asset-item id="OctopusModel" src="./Octopus.glb"></a-asset-item>
+        <a-asset-item id="WhaleO3" src="./WhaleO1.glb"></a-asset-item>
+        <a-asset-item id="OctupusO3" src="./Octopus.glb"></a-asset-item>
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-      <!-- Ballena -->
-      <a-entity id="target-whale" mindar-image-target="targetIndex: 0">
-        <a-gltf-model
-          id="whale-model"
-          src="#WhaleModel"
-          position="0 0 0"
-          scale="0.7 0.7 0.7"
-          rotation="0 0 0"
-          animation__updown="property: position; to: 0 0.3 0; dur: 2000; easing: easeInOutSine; loop: true; dir: alternate"
-          animation__spin="property: rotation; to: 0 360 0; dur: 6000; loop: true; easing: linear"
-        ></a-gltf-model>
+      <!-- Target Ballena -->
+      <a-entity id="whaleTarget" mindar-image-target="targetIndex: 0">
+        <a-gltf-model src="#WhaleO3" scale="0.7 0.7 0.7" position="0 0 0"></a-gltf-model>
       </a-entity>
 
-      <!-- Pulpo -->
-      <a-entity id="target-octopus" mindar-image-target="targetIndex: 1">
-        <a-gltf-model
-          id="octopus-model"
-          src="#OctopusModel"
-          position="0 -0.25 0"
-          scale="0.05 0.05 0.05"
-          rotation="0 0 0"
-          animation__updown="property: position; to: 0 0.2 0; dur: 2500; easing: easeInOutSine; loop: true; dir: alternate"
-          animation__spin="property: rotation; to: 0 360 0; dur: 8000; loop: true; easing: linear"
-        ></a-gltf-model>
+      <!-- Target Pulpo -->
+      <a-entity id="octopusTarget" mindar-image-target="targetIndex: 1">
+        <a-gltf-model src="#OctupusO3" scale="0.05 0.05 0.05" position="0 -0.25 0"></a-gltf-model>
       </a-entity>
     </a-scene>
 
     <script>
-      const factBox = document.querySelector("#fact-box");
-      const menu = document.querySelector("#menu");
+      const scanMessage = document.getElementById("scanMessage");
+      const factMenu = document.getElementById("factMenu");
 
-      const facts = {
-        whale: [
-          "Las ballenas azules son los animales más grandes que han existido.",
-          "Su corazón puede pesar lo mismo que un coche pequeño.",
-          "Se comunican con cantos que viajan grandes distancias bajo el agua."
-        ],
-        octopus: [
-          "Los pulpos tienen tres corazones y sangre azul.",
-          "Pueden cambiar de color y textura para camuflarse.",
-          "Son considerados de los invertebrados más inteligentes."
-        ]
-      };
+      const whaleTarget = document.querySelector("#whaleTarget");
+      const octopusTarget = document.querySelector("#octopusTarget");
 
-      let currentAnimal = null;
-      let factIndex = 0;
+      const whaleFacts = [
+        "🐳 Las ballenas son los animales más grandes del planeta.",
+        "🐳 Pueden comunicarse a cientos de kilómetros bajo el agua.",
+        "🐳 Algunas ballenas viven más de 90 años."
+      ];
 
-      let whaleDetected = false;
-      let octopusDetected = false;
+      const octopusFacts = [
+        "🐙 Los pulpos tienen tres corazones.",
+        "🐙 Son maestros del camuflaje.",
+        "🐙 Pueden abrir frascos desde dentro."
+      ];
 
-      function showFact() {
-        if (currentAnimal) {
-          factBox.innerText = facts[currentAnimal][factIndex];
-        }
-      }
+      let whaleVisible = false;
+      let octopusVisible = false;
 
-      function updateMenuVisibility() {
-        if ((whaleDetected && !octopusDetected) || (!whaleDetected && octopusDetected)) {
-          menu.style.display = "block";
+      function updateUI() {
+        if (whaleVisible && !octopusVisible) {
+          scanMessage.style.display = "none";
+          factMenu.style.display = "block";
+          factMenu.textContent = whaleFacts[Math.floor(Math.random() * whaleFacts.length)];
+        } else if (octopusVisible && !whaleVisible) {
+          scanMessage.style.display = "none";
+          factMenu.style.display = "block";
+          factMenu.textContent = octopusFacts[Math.floor(Math.random() * octopusFacts.length)];
         } else {
-          menu.style.display = "none";
+          // Si no hay targets o ambos están visibles
+          factMenu.style.display = "none";
+          scanMessage.style.display = "block";
         }
       }
 
-      // Eventos detección ballena
-      document.getElementById("target-whale").addEventListener("targetFound", () => {
-        whaleDetected = true;
-        if (!octopusDetected) {
-          currentAnimal = "whale";
-          factIndex = 0;
-          showFact();
-        }
-        updateMenuVisibility();
+      whaleTarget.addEventListener("targetFound", () => {
+        whaleVisible = true;
+        updateUI();
       });
-      document.getElementById("target-whale").addEventListener("targetLost", () => {
-        whaleDetected = false;
-        updateMenuVisibility();
+      whaleTarget.addEventListener("targetLost", () => {
+        whaleVisible = false;
+        updateUI();
       });
 
-      // Eventos detección pulpo
-      document.getElementById("target-octopus").addEventListener("targetFound", () => {
-        octopusDetected = true;
-        if (!whaleDetected) {
-          currentAnimal = "octopus";
-          factIndex = 0;
-          showFact();
-        }
-        updateMenuVisibility();
+      octopusTarget.addEventListener("targetFound", () => {
+        octopusVisible = true;
+        updateUI();
       });
-      document.getElementById("target-octopus").addEventListener("targetLost", () => {
-        octopusDetected = false;
-        updateMenuVisibility();
-      });
-
-      // Botones curiosidades
-      document.querySelector("#btnNext").addEventListener("click", () => {
-        if (currentAnimal) {
-          factIndex = (factIndex + 1) % facts[currentAnimal].length;
-          showFact();
-        }
-      });
-
-      document.querySelector("#btnPrev").addEventListener("click", () => {
-        if (currentAnimal) {
-          factIndex = (factIndex - 1 + facts[currentAnimal].length) % facts[currentAnimal].length;
-          showFact();
-        }
+      octopusTarget.addEventListener("targetLost", () => {
+        octopusVisible = false;
+        updateUI();
       });
     </script>
   </body>
 </html>
+
 
 
